# khmer-ocr-project

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
docs/: PROGRESS.md  bigru_architecture_tikz.tex  dataset_generation.md  hf_dataset_card_200k_siemreap_arial.md  khmer-script-guide.md  model_architecture_mermaid.md  ocr_pipeline_stages_tikz.tex  paper-outline.md  paper-template.tex  project_summary.md  resnet18_architecture_tikz.tex  resnet34_architecture_tikz.tex  resnet34_metrics_pgfplots.tex  resnet_comparison_metrics_pgfplots.tex  resnet_ocr_architecture_tikz.tex
renderer/: .dockerignore  Dockerfile  package-lock.json  package.json  render.js  server.js
renderer/frontend/: package-lock.json  vite.config.js
renderer/frontend/src/: App.jsx
scripts/: compress_dataset.py  filter_dataset.py  generate.py  generate_1m_texts.py  generate_200k_siemreap_arial.py  generate_text.py  generate_text_csv.py  merge_duckdb_texts.py  notebook.py  plot_architecture.py  plot_bigru_detail.py  plot_metrics.py  plot_resnet_comparison_metrics.py  prepare_yolo_text_detector.py  preview.py  sample_balanced_dataset.py  serve.py  train_200k.py  train_200k_resnet18_bigru.py  upload_dataset_readme.py  upload_server.py  upload_to_hf.py  upload_to_hub.py  visualize_resnet34_bigru_arch.py
scripts/archive/: train_hanuman_legacy.py  train_hf_legacy.py
src/: config.py  dataset.py  decode.py  model.py  render.py
